--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,28 +1,19 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
-    "esModuleInterop": true,
+    "module": "CommonJS",
+    "esModuleInterop": false,
     "declaration": true,
-    "target": "es2017",
+    "target": "ES2017",
     "noImplicitAny": false,
-    "resolveJsonModule": true,
-    "moduleResolution": "node",
+    "resolveJsonModule": false,
+    "moduleResolution": "Node",
     "sourceMap": true,
     "outDir": "lib",
     "baseUrl": ".",
     "paths": {
-      "*": [
-        "node_modules/*",
-        "src/types/*"
-      ]
+      "*": ["node_modules/*", "src/types/*"]
     }
   },
-  "include": [
-    "src/**/*"
-  ],
-  "exclude": [
-    "node_modules",
-    "**/*.spec.ts",
-    "**/*.test.ts"
-  ]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "**/*.spec.ts", "**/*.test.ts"]
 }
